kubernetes/apps/networking/envoy-gateway/gateway/external/gateway.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  annotations:
    external-dns.alpha.kubernetes.io/target: &hostname external.chestr.dev
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: *hostname
      lbipam.cilium.io/ips: 10.0.20.200
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: external-proxy-config
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.chestr.dev"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https-root
      protocol: HTTPS
      port: 443
      hostname: chestr.dev
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: chestr-dev-tls
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.chestr.dev"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: chestr-dev-tls
    - name: controlforensics-http
      protocol: HTTP
      port: 80
      hostname: "*.controlforensics.com"
      allowedRoutes:
        namespaces:
          from: Same
    - name: controlforensics-https-tld
      protocol: HTTPS
      port: 443
      hostname: controlforensics.com
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: controlforensics-com-tls
    - name: controlforensics-https
      protocol: HTTPS
      port: 443
      hostname: "*.controlforensics.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: controlforensics-com-tls
